Updating the portfolio design and contents

--- a/index.html
+++ b/index.html
@@ -149,42 +149,33 @@
       <article class="about  active" data-page="about">
 
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h3 class="h3 article-title">Meet Your Future Software Maestro</h3>
         </header>
 
         <section class = "greeting-text">
           <h3 class="auto-type">Hello</h3>
         </section>
-        <section class="about-text">
-          <ul class="Education">
-            <h3 style="margin-top: 10px;">Education:</h3>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Master of Science in Computer Science</b> - State University of New York <b>(GPA: 3.81/4)</b></li>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Bachelor of Engineering in Computer Engineering</b> - Savitribai Phule Pune University <b>(GPA: 3.64/4)</b></li>
-          </ul>
-          <ul class="Professional">
-            <h3 style="margin-top: 10px;">Professional Experience:</h3>   
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>DevOps and Networking Intern at Geeks Solutions:</b> Boosted cross cloud communication by 63% via site to site VPN between AWS and Azure</li>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Web Developer Intern at Bunchful:</b> Migrated 2 major websites to React framework, resulting in a 25% decrease in page load times</li>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Software Developer at TIAA GBS:</b> Spearheaded development of API solution, resulting in an 82% decrease in manual effort</li>
-          </ul>
-          <ul class="Technical">
-            <h3 style="margin-top: 10px;">Technical Skills:</h3>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> Proficient in <b>Java, Python, JavaScript, SQL, NoSQL, Git, Docker, Spring Boot, AWS, Azure, Node.js, </b> and more</li>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> Experienced in project management tools like <b>Git, Github, Gitlab, Jenkins, JIRA and Bitbucket</b></li>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> Certified in <b>Azure Fundamentals, RESTful APIs, Build and Deploy Containerized Apps</b></li>
-          </ul>
-          
-          <ul class="Project">
-            <h3 style="margin-top: 10px;">Project Experience:</h3>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> <b>Led Movies Data Analysis Project:</b> Utilized MongoDB for NoSQL queries and achieved <b>73% reduction in query execution time</b></li>
-            <li style="margin: 3px; margin-left: 12px;"><b>•</b> Developed e-commerce website 'The Spice Tradition' resulting in <b>82% increase in online sales within first month</b></li>
-          </ul>
+        <section>
+          <br>
+          <h3>Software Engineer | Master of Science in Computer Science</h3>
+          <br>
+<p>&emsp; &emsp; Welcome to my resume—a document almost as well-optimized as my code. As a tech enthusiast armed with a Master's degree from Binghamton University and a repertoire of skills ranging from Java to juggling (well, figuratively speaking with projects), I thrive on turning coffee into code. With a knack for improving user satisfaction by 96% and a history of boosting cross-cloud communication by 63%, I'm essentially the Swiss Army knife of the tech world, but less pointy. If you’re looking for someone to solve software bugs or debate the merits of tabs vs. spaces, then we should definitely talk!</p><br>
+
+          <p>&emsp; &emsp; "Why don’t you take a peek at my resume? It’s like a backstage pass to my career—just without the awkward backstage conversations!"</p><br>
+          <a href="./assets/Documents/Resume/HarsimranSinghDhillon.pdf" target="_blank">
+            <span class="download-button"><b>Download Resume</b></span>
+          </a>
+          <br>
         </section>
 
 
+        <header>
+          <h3 class="h3 article-title">Tech Proficiencies</h3>
+        </header>
+
         <section class="service">
 
-          <h3 class="h3 service-title">Skills</h3>
+          <h4 class="h4 service-title">My Secret Sauce for Success</h4>
 
           <ul class="service-list">
 
@@ -317,7 +308,8 @@
       <article class="resume" data-page="resume">
 
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h3 class="h3 article-title">Professional Odyssey</h3>
+          <h3 class="h3 article-title">Navigating the World of Tech</h3>
         </header>
 
         <section class="timeline">
@@ -376,7 +368,7 @@
 
               <h4 class="h4 timeline-item-title">DevOps and Networking Intern - Geeks Solutions</h4>
 
-              <span><i>June 2024 - July 2024</i></span>
+              <span><i>June 2024 - July 2024 (2 Months)</i></span>
 
               <p class="timeline-text">
                 <ul>
@@ -395,7 +387,7 @@
 
               <h4 class="h4 timeline-item-title">Web Developer Intern - Bunchful</h4>
 
-              <span><i>May 2024 - June 2024</i></span>
+              <span><i>May 2024 - June 2024 (2 Months)</i></span>
 
               <p class="timeline-text">
                 <ul>
@@ -425,7 +417,7 @@
                   <b>•</b> <b>Implemented agile methodologies</b> to streamline the 4-month API conversion project from Mule framework to Apache Camel, resulting in a <b>43% reduction in the overall project timeline</b>
                 </li>
                 <li>
-                  <b>•</b> <b>Reduced response times during server outages by 80%</b> by analyzing and resolving complex issues, supporting the testing team, and optimizing the CI/CD of a REST API
+                  <b>•</b> <b>Resolved 20+ software bugs</b> within tight deadlines, maintaining a <b>93% uptime</b> and ensuring high user satisfaction
                 </li>
                 <li>
                   <b>•</b> <b>Rectified application server crash issues</b> in the <b>production environment</b> by <b>preserving 53% of memory</b> used, managed production issues and enhancements, and provided DevOps and SDLC support for 4 applications
@@ -447,13 +439,10 @@
               <p class="timeline-text">
                 <ul>
                   <li>
-                    <b>•</b> Implemented Attendance Marking System, <b>reducing manual labor by 87% and paper waste by 64%</b>
+                    <b>•</b> Assisted in the implementation of a CI/CD pipeline, <b>reducing deployment times by 40%</b> and enabling a faster release cycle</b>
                   </li>
                   <li>
-                    <b>•</b> <b>Debugged and triaged application logs with Splunk</b>, identifying and documenting solutions for each failure call
-                  </li>
-                  <li>
-                    <b>•</b> Conducted advanced data analysis with MySQL and data visualization tools, resulting in a <b>47% improvement in targeted marketing</b>
+                    <b>•</b> Managed database optimization projects on the MySQL platform, <b>reducing query response times by 25%</b>
                   </li>
                 </ul>
               </p>
@@ -479,7 +468,8 @@
       <article class="portfolio" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h3 class="h3 article-title">Digital Footprints</h3>
+          <h3 class="h3 article-title">My Contributions to the Tech World</h3>
         </header>
 
         <section class="projects">
@@ -853,5 +843,6 @@
   gtag('config', 'G-PCV5E87VKB');
 </script>
 </body>
+
 
 </html>
