Updating the contents

--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
               <p class="timeline-text">
                 <ul>
                 <li>
-                  <b>•</b> Migrated 2 major websites to the React framework, resulting in a <b>25% decrease in page load times</b> and improved user experience
+                  <b>•</b> Migrated 2 major websites to the React framework, resulting in a <b>35% decrease in page load times</b> and improved user experience
                 </li>
                 <li>
-                  <b>•</b>Introduced a web development checklist with an integrated scoring system, <b>boosting team efficiency by 40%</b>
+                  <b>•</b>Introduced a web development checklist with an integrated scoring system, <b>boosting team efficiency by 72%</b>
                 </li>
                 <li>
-                  <b>•</b>Utilized Google Analytics to <b>boost site navigation by 37%</b> through insightful metric analysis
+                  <b>•</b>Leveraged advanced tracking techniques with Google Analytics to measure user flow, uncovering insights that streamlined navigation and <b>improved site visibility by 79%</b>
                 </li>
               </ul>
               </p>
@@ -439,10 +439,10 @@
               <p class="timeline-text">
                 <ul>
                   <li>
-                    <b>•</b> Assisted in the implementation of a CI/CD pipeline, <b>reducing deployment times by 40%</b> and enabling a faster release cycle</b>
+                    <b>•</b> Developed a streamlined CI/CD process that incorporated automated quality checks, <b>reducing deployment times by 85%</b>; this efficiency <b>allows for an average of 10 new feature releases</b> each month
                   </li>
                   <li>
-                    <b>•</b> Managed database optimization projects on the MySQL platform, <b>reducing query response times by 25%</b>
+                    <b>•</b> Managed database optimization projects on the MySQL platform, <b>reducing query response times by 63%</b>
                   </li>
                 </ul>
               </p>
