Updating resume and contents of the portfolio

--- a/index.html
+++ b/index.html
@@ -373,10 +373,13 @@
               <p class="timeline-text">
                 <ul>
                 <li>
-                  <b>•</b> <b>Boosted cross-cloud communication by 63%</b> via site-to-site VPN between AWS and Azure, streamlining network operations and reducing latency
+                  <b>•</b>Improved <b>cross-cloud</b> transaction response times by 43% by configuring and optimizing a <b>VPN</b> between <b>AWS</b> and <b>Azure</b> to meet client requirements
                 </li>
                 <li>
-                  <b>•</b><b>Achieved 96% client satisfaction</b> by ensuring secure, reliable connections and simplifying network management
+                  <b>•</b>Achieved 96% client satisfaction by identifying and resolving performance issues of the client <b>Kubernetes</b> servers, designing and integrating secure, reliable system solutions for financial transactions
+                </li>
+                <li>
+                  Reduced network configuration setup time by 30% through process automation and detailed documentation on <b>Confluence</b>
                 </li>
               </ul>
               </p>
@@ -392,13 +395,10 @@
               <p class="timeline-text">
                 <ul>
                 <li>
-                  <b>•</b> Migrated 2 major websites to the React framework, resulting in a <b>35% decrease in page load times</b> and improved user experience
+                  <b>•</b> Led a team of 4 interns to improve page load times by 35% by migrating legacy web applications to <b>ReactJS</b> and developing reusable <b>UI components</b>, streamlining development processes across multiple projects
                 </li>
                 <li>
-                  <b>•</b>Introduced a web development checklist with an integrated scoring system, <b>boosting team efficiency by 72%</b>
-                </li>
-                <li>
-                  <b>•</b>Leveraged advanced tracking techniques with Google Analytics to measure user flow, uncovering insights that streamlined navigation and <b>improved site visibility by 79%</b>
+                  <b>•</b>Boosted overall <b>team productivity</b> by 72% through developing automation tools and enhancing communication workflows, creating documentation over <b>Confluence</b>, using <b>Agile Development</b> practices
                 </li>
               </ul>
               </p>
@@ -414,16 +414,16 @@
               <p class="timeline-text">
                 <ul>
                 <li>
-                  <b>•</b> <b>Implemented agile methodologies</b> to streamline the 4-month API conversion project from Mule framework to Apache Camel, resulting in a <b>43% reduction in the overall project timeline</b>
+                  <b>•</b> Reduced manual efforts by 82% by delivering <b>RESTful API</b> solutions using <b>Java</b> and <b>Spring Boot</b> to automate business processes, increasing overall operational efficiency
                 </li>
                 <li>
-                  <b>•</b> <b>Resolved 20+ software bugs</b> within tight deadlines, maintaining a <b>93% uptime</b> and ensuring high user satisfaction
+                  <b>•</b> Achieved 93%+ system uptime by implementing <b>CI/CD</b> pipelines using <b>Docker</b> and <b>Jenkins</b>, enabling frequent, high-quality software releases critical to the business
                 </li>
                 <li>
-                  <b>•</b> <b>Rectified application server crash issues</b> in the <b>production environment</b> by <b>preserving 53% of memory</b> used, managed production issues and enhancements, and provided DevOps and SDLC support for 4 applications
+                  <b>•</b> Reduced project timelines by 43% by leading a team of 2 for the migration of a <b>monolithic architecture</b> to <b>microservices</b> using <b>Apache Camel</b>, improving system resilience for around 500 users in a high-stakes financial environment
                 </li>
                 <li>    
-                  <b>•</b> Spearheaded development of API solution, resulting in an <b>82% decrease in manual effort and bolstering efficiency</b>
+                  <b>•</b> Ensured system reliability and minimized downtime by resolving over 20 critical production issues across financial platforms, using <b>Splunk</b> for log analysis and <b>JIRA Kanban boards</b> for efficient tracking and prioritization
                 </li>
               </ul>
               </p>
